Fix text overflow for production block, add adaptive logo to catalog and form

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -11,6 +11,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 6px;
+    margin-bottom: 4px;
   }
 }
