--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -25,6 +25,8 @@
   display: block;
   width: 260px;
   height: 195px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .product__title {
@@ -85,6 +87,7 @@
   .product__image {
     width: 334px;
     height: 334px;
+    margin: 0;
   }
 
   .product__card {
