--- a/source/less/blocks/production.less
+++ b/source/less/blocks/production.less
@@ -1,5 +1,4 @@
 .production {
-  position: relative;
   margin-left: 30px;
   margin-right: 30px;
   border: 1px solid @border-light-color;
@@ -18,20 +17,24 @@
   color: @text-black;
 }
 
-.production__video {
-  position: absolute;
-  top: 95px;
+.production__media-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 260px;
+}
 
-  height: 150px;
+.production__video {
+  display: none;
 }
 
 .production__photo {
+  display: block;
   width: 260px;
   height: 150px;
 }
 
 .production__text {
-  margin-top: 22px;
+  margin-top: 26px;
   margin-bottom: 26px;
   margin-left: 34px;
   margin-right: 34px;
@@ -70,6 +73,11 @@
     padding-right: 40px;
   }
 
+  .production__media-content {
+    margin: 0;
+    width: 668px;
+  }
+
   .production__photo {
     width: 668px;
     height: 455px;
@@ -95,17 +103,24 @@
 
 @media (min-width: @desktop-width) {
   .production {
-    width: 1050px;
-    flex-direction: row;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    width: 1050px - 2px;
+    justify-content: space-between;
+    align-items: flex-end;
   }
 
   .production__title {
-    margin-right: auto;
     margin-top: 96px;
     padding-left: 79px;
-    width: 151px;
+    padding-right: 60px;
+    width: 367px - 79px - 60px;
+  }
+
+  .production__media-content {
+    order: 15;
+
+    margin-right: 367px;
+    margin-top: -440px;
+    width: 682px;
   }
 
   .production__photo {
@@ -114,7 +129,6 @@
   }
 
   .production__text {
-    flex-grow: 1;
     padding-left: 79px;
     width: 367px - 79px;
     margin-bottom: 46px;
@@ -122,7 +136,6 @@
 
   .production__wrapper {
     padding: 0;
-    margin-top: -288px;
   }
 
   .production__order {
